# unobtrusive-scp-sl

./: .gitignore  .gitlab-ci.yml  README.md  flake.nix  pyproject.toml
tests/: test_sanity.py
uscpsl/: __main__.py
uscpsl/lib/: clarify_deaths.py  colorize_classes.py  get_file.py  names.py  preprocess.py  remap.py  remove_descriptions.py  update_facility.py  update_subtitles.py
