[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "template"
version = "0.1.0"
description = "A template Python package"
readme = "README.md"
requires-python = ">=3.13.9"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Author", email = "author@example.org" },
]

dependencies = [
]

[project.urls]
"Source" = "https://gitlab.com/-/p/75750085"
"Bug Reports" = "https://gitlab.com/esoteric-templates/templates/template-python-package/-/issues"

# [project.scripts]
# template = "template.__main__:main"

[tool.setuptools]
packages = { find = { include = ["template*"] } }
include-package-data = true

[tool.setuptools.package-data]
"template" = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
