[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "uscpsl"
version = "0.1.0"
description = "A script that updates SCP:SL translations to be unobtrusive"
readme = "README.md"
requires-python = ">=3.13.9"
license = "CC-BY-SA-3.0"
license-files = ["LICENSE"]
authors = [
  { name = "Дима Ш.", email = "dima.o.sh@proton.me" },
]

dependencies = [
]

[project.urls]
"Source" = "https://gitlab.com/-/p/77613771"
"Bug Reports" = "https://gitlab.com/shdima/unobtrusive-scp-sl/-/issues"

[project.scripts]
uscpsl = "uscpsl.__main__:main"

[tool.setuptools]
packages = { find = { include = ["uscpsl*"] } }
include-package-data = true

[tool.setuptools.package-data]
"uscpsl" = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
